--- a/.env
+++ b/.env
@@ -3,8 +3,8 @@ DATABASE_TYPE=sqlite
 DATABASE_NAME=:memory:
 
 # RapidAPI Configuration (for VIN lookup)
-RAPIDAPI_KEY=your_rapidapi_key_here
-RAPIDAPI_HOST=vin-lookup2.p.rapidapi.com
+RAPIDAPI_KEY=
+RAPIDAPI_HOST=
 
 # Application Configuration
 PORT=3000
